@startuml DomainModelExerpt
'https://plantuml.com/use-case-diagram

rectangle #36827F{
class Building  << Root >> << Entity >>
class BuildingDescription  << (v,#A4C2E5) ValueObject >>
class BuildingName  << (v,#A4C2E5) ValueObject >>
class BuildingCode  << (v,orange) ValueObject >> << unique >>
class BuildingSize  << (v,#A4C2E5) ValueObject >>
}

Building "*"-->"0..1" BuildingDescription
Building "1"-->"0..1" BuildingName
Building "*"-->"1" BuildingSize
Building "1"-->"1" BuildingCode

@enduml